版本一优化
发送文本翻译弹框增加遮罩。
中文语言包，部分不显示问题处理。
翻译开关首次登陆默认关闭。
翻译语言包列表，选中项不可点击处理，选中后文本不能自动换行处理。

--- a/Telegram/BUILD
+++ b/Telegram/BUILD
@@ -389,11 +389,11 @@ official_apple_pay_merchants = [
 ]
 
 official_bundle_ids = [
-    "ph.telegra.Telegraph",
+    "well.telegra.Telegraph",
     "org.telegram.Telegram-iOS",
 ]
 
-apple_pay_merchants = official_apple_pay_merchants if telegram_bundle_id == "ph.telegra.Telegraph" else []
+apple_pay_merchants = official_apple_pay_merchants if telegram_bundle_id == "well.telegra.Telegraph" else []
 
 apple_pay_merchants_fragment = "" if apple_pay_merchants == [] else """
 <key>com.apple.developer.in-app-payments</key>
