--- a/Telegram/BUILD
+++ b/Telegram/BUILD
@@ -477,9 +477,9 @@ plist_fragment(
         siri_fragment,
         associated_domains_fragment,
         icloud_fragment,
-        apple_pay_merchants_fragment,
-        unrestricted_voip_fragment,
-        carplay_fragment,
+#        apple_pay_merchants_fragment,
+#        unrestricted_voip_fragment,
+#        carplay_fragment,
         communication_notifications_fragment,
     ])
 )
